[maven-release-plugin] rollback the release of request-scope-cache-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Request Scope Cache Manager</name>
@@ -8,7 +10,7 @@
 
     <groupId>io.github.ddasol</groupId>
     <artifactId>request-scope-cache</artifactId>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -40,7 +42,7 @@
         <connection>scm:git:git://github.com/ddasol/request-scope-cache.git</connection>
         <developerConnection>scm:git:ssh://github.com:ddasol/request-scope-cache.git</developerConnection>
         <url>https://github.com/ddasol/request-scope-cache/tree/main</url>
-  </scm>
+    </scm>
 
     <developers>
         <developer>
