--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Request Scope Cache Manager</name>
@@ -10,7 +8,7 @@
 
     <groupId>io.github.ddasol</groupId>
     <artifactId>request-scope-cache</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -42,7 +40,8 @@
         <connection>scm:git:git://github.com/ddasol/request-scope-cache.git</connection>
         <developerConnection>scm:git:ssh://github.com:ddasol/request-scope-cache.git</developerConnection>
         <url>https://github.com/ddasol/request-scope-cache/tree/main</url>
-    </scm>
+      <tag>request-scope-cache-1.0</tag>
+  </scm>
 
     <developers>
         <developer>
