--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/ddasol/request-scope-cache.git</connection>
-        <developerConnection>scm:git:ssh://github.com:ddasol/request-scope-cache.git</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/ddasol/request-scope-cache.git</developerConnection>
         <url>https://github.com/ddasol/request-scope-cache/tree/main</url>
       <tag>request-scope-cache-1.0</tag>
   </scm>
